# pyPolyMesh

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: connectivity-and-geometry.md  diagnostics.md  getting-started.md  mesh-modification.md  visualization.md
pypolymesh/: __init__.py  connectivity.py  elements.py  geometry.py  polymesh.py  utils.py
pypolymesh/diagnostics/: __init__.py  cyclic.py
pypolymesh/visualization/: __init__.py  geometry.py  plotly.py  triangulation.py
tests/: test_connectivity.py  test_cyclic.py  test_polymesh_scale.py  test_visualization.py
