[tool.poetry]
name = "pypolymesh"
version = "0.1.0"
description = "A small library that can read, write and modify meshes in OpenFOAM polyMesh format"
authors = ["Cetin Alanyalioglu <cetinalanyalioglu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.4"
numba = "^0.58.1"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
black = "^24.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
unstable = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true
force_alphabetical_sort = true